--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,3 +10,32 @@ jobs:
     steps:
       - name: Check Branch
         run: echo "Current branch is ${GITHUB_REF#refs/heads/}"
+
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Build with Gradle
+        run: ./gradlew bootJar
+
+      - name: web docker build and push
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.DOCKER_REPO }}/cicd-web .
+          docker push ${{ secrets.DOCKER_REPO }}/cicd-web
+
+      - name: executing remote ssh commands using password
+        uses: yjjjwww/cicd@main
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.KEY }}
+          script: |
+            sudo docker rm -f $(docker ps -qa)
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-web
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-nginx
+            docker-compose up -d
+            docker image prune -f
