--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             sudo docker rm -f $(docker ps -qa)
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-web
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/second-eyes-nginx
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-web
+            sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-nginx
             docker-compose up -d
             docker image prune -f
