fix : github actions docker compose

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -37,5 +37,5 @@ jobs:
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-web
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-nginx
-            sudo docker-compose up -d
+            sudo docker-compose up web
             sudo docker image prune -f
