--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,6 +36,5 @@ jobs:
           script: |
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-web
-            sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-nginx
-            sudo docker-compose up web
+            sudo docker-compose up -d
             sudo docker image prune -f
