--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,7 +34,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.KEY }}
           script: |
+            sudo chmod 666 /var/run/docker.sock
             sudo docker rm -f $(docker ps -qa)
             sudo docker pull ${{ secrets.DOCKER_REPO }}/cicd-web
-            sudo docker-compose up -d
+            sudo docker compose up -d
             sudo docker image prune -f
