fix : github actions add docker-compose.yml

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,6 +27,9 @@ jobs:
           docker build --platform amd64 --build-arg DEPENDENCY=build/dependency -t ${{ secrets.DOCKER_REPO }}/cicd-web .
           docker push ${{ secrets.DOCKER_REPO }}/cicd-web
 
+      - name: Copy Docker Compose file to EC2 instance
+        run: scp -i ${{ secrets.KEY }} docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
+
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
