--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -28,7 +28,11 @@ jobs:
           docker push ${{ secrets.DOCKER_REPO }}/cicd-web
 
       - name: Copy Docker Compose file to EC2 instance
-        run: scp -i ${{ secrets.KEY }} docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
+        run: |
+          echo "$KEY" > key.pem
+          chmod 400 key.pem
+          scp -i key.pem docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
+          rm key.pem
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
