--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           echo "$KEY" > key.pem
           chmod 400 key.pem
-          scp -i key.pem docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
+          scp -o StrictHostKeyChecking=no -i key.pem docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
           rm key.pem
 
       - name: executing remote ssh commands using password
