--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,21 +18,24 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Gradle Caching
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Build with Gradle
         run: ./gradlew build
 
       - name: web docker build and push
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build --platform amd64 --build-arg DEPENDENCY=build/dependency -t ${{ secrets.DOCKER_REPO }}/cicd-web .
+          docker build -f Dockerfile -t ${{ secrets.DOCKER_REPO }}/cicd-web .
           docker push ${{ secrets.DOCKER_REPO }}/cicd-web
-
-      - name: Copy Docker Compose file to EC2 instance
-        run: |
-          echo "$KEY" > key.pem
-          chmod 400 key.pem
-          scp -o StrictHostKeyChecking=no -i key.pem docker-compose.yml ubuntu@${{ secrets.HOST }}:/home/ubuntu/
-          rm key.pem
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
