--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,6 +40,15 @@ jobs:
           docker build -f Dockerfile -t ${{ secrets.DOCKER_REPO }}/cicd-web .
           docker push ${{ secrets.DOCKER_REPO }}/cicd-web
 
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ubuntu
+          key: ${{ secrets.KEY }}
+          source: "docker-compose.yml"
+          target: "/home/ubuntu"
+
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
